# compile-pdf

./: .cursorrules  .env.example  .gitignore  .spectral.yaml  CHANGELOG.md  CLAUDE.md  COMPILE-DESIGN-SPEC.md  COMPILE-IMPL-PLAN.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: architecture.md  cli.md  contract.md  deploy.md  impose.md  marks.md  openapi.yaml  rewrite.md  separations.md  soft-proof.md  spots.md  stream.md  trap.md  white-underbase.md
docs/operations/: multi-instance.md  retention.md
schemas/v1/: .gitkeep
scripts/: consume_surface_audit.py  dump_openapi.py
src/compile_pdf/: __init__.py  cache.py  tasks.py  version.py
src/compile_pdf/api/: __init__.py  auth.py  main.py  middleware.py
src/compile_pdf/cjd/: api.py  cli.py  orchestrator.py  schema.py  xml.py
src/compile_pdf/cli/: __init__.py
src/compile_pdf/impose/: __init__.py  api.py  cli.py  engine.py  layout_schema.py  verify.py
src/compile_pdf/lineage/: store.py
src/compile_pdf/marks/: __init__.py  api.py  cli.py  engine.py  library.py  template_schema.py  verify.py
src/compile_pdf/retention/: __init__.py  api.py
src/compile_pdf/rewrite/: __init__.py  api.py  cli.py  engine.py  verify.py
src/compile_pdf/separations/: __init__.py  api.py  extract.py
src/compile_pdf/soft_proof/: __init__.py  api.py  engine.py  schema.py  verify.py
src/compile_pdf/spots/: __init__.py  api.py
src/compile_pdf/stream/: __init__.py  api.py  cli.py  engine.py  schema.py  verify.py
src/compile_pdf/trap/: __init__.py  _geom_fallback.py  api.py  cli.py  engine.py  extract.py  policy_schema.py  verify.py
src/compile_pdf/trap/engines/: external.py  ghostscript.py  pure_python.py
src/compile_pdf/white_underbase/: __init__.py  api.py  cli.py  engine.py  schema.py  verify.py
tests/: conftest.py  test_api_auth_wiring.py  test_api_health.py  test_async_jobs.py  test_auth.py  test_cache.py  test_cjd_api.py  test_cjd_api_xml.py  test_cjd_cli.py  test_cjd_cli_xml.py  test_cjd_orchestrator.py  test_cjd_schema.py  test_cjd_xml.py  test_cli.py  test_codex_consumption.py  test_consume_surface_audit.py  test_impose_determinism.py  test_impose_engine.py  test_impose_layout_schema.py  test_impose_verify.py  test_lineage_redis.py  test_lineage_s3.py  test_lineage_store.py  test_marks_api.py  test_marks_api_multipart.py  test_marks_cli.py  test_marks_determinism.py  test_marks_engine.py  test_marks_external.py  test_marks_library.py  test_marks_step_repeat.py  test_marks_surface.py  test_marks_template_schema.py  test_marks_verify.py  test_queue_status.py  test_retention_api.py  test_retention_cjd.py  test_retention_consent.py  test_retention_lineage_flag.py  test_retention_producer_apis.py  (+35 more)
