[project]
name = "compile-pdf"
version = "0.1.0"
description = "CompilePDF — the only writer in the Print With Synergy stack. Rewrite, marks, impose, and trap producers built on top of codex-pdf."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Print With Synergy", email = "iam@quincy.codes" }]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "codex-pdf>=1.4.2,<2.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pikepdf>=8.13",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "celery[redis]>=5.3",
  "redis>=5.0",
  "boto3>=1.34",
  "httpx>=0.27",
  "click>=8.1",
  "structlog>=24.1",
  "prometheus-client>=0.20",
  "ulid-py>=1.1",
  "defusedxml>=0.7.1",
  "Pillow>=10.2",
]

[project.optional-dependencies]
geom = ["pyclipr>=0.1.6"]
trap-gs = []
trap-external = []
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.9",
  "pre-commit>=3.6",
  "types-redis",
]

[project.scripts]
compile-pdf = "compile_pdf.cli:main"

[project.urls]
Homepage = "https://github.com/printwithsynergy/compile-pdf"
Repository = "https://github.com/printwithsynergy/compile-pdf"
Issues = "https://github.com/printwithsynergy/compile-pdf/issues"
Documentation = "https://github.com/printwithsynergy/compile-pdf/tree/main/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compile_pdf"]

[tool.hatch.build.targets.wheel.force-include]
"schemas/v1" = "compile_pdf/schemas/v1"

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.9",
  "pre-commit>=3.6",
  "types-redis",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4", "RET"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# codex-pdf doesn't ship a py.typed marker yet. Compile imports its
# published surface — let mypy treat the imports as Any rather than
# fail strict on every line.
[[tool.mypy.overrides]]
module = ["codex_pdf", "codex_pdf.*"]
ignore_missing_imports = true

# Producer routers mount lazily; their api modules don't exist yet
# (Phase 1.x). Suppress the import-untyped error until they ship.
[[tool.mypy.overrides]]
module = [
    "compile_pdf.rewrite.api",
    "compile_pdf.marks.api",
    "compile_pdf.impose.api",
    "compile_pdf.trap.api",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/compile_pdf"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]
